moving codes to git repo

--- a/views/index.html
+++ b/views/index.html
@@ -13,43 +13,56 @@
   <!-- Header Section with Navigation -->
   <header>
     <div class="container">
-      <h1>Welcome to Tyre Shop</h1>
+      <h1>Chinek Tyres</h1>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>          
+          <li><a href="#products">Tyre Brands</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#products">Products</a></li>
           <li><a href="#contact">Contact</a></li> 
         </ul>
       </nav>
+      
     </div>
   </header>
 
   <!-- Home Section -->
   <section id="home" class="home">
-    <div class="container">
-      <h2>Your one-stop shop for the best tyres!</h2>
-    </div>
+    <div id="services">
+      <div class="container">
+        <h1 class="sub-title">Our Guarantee is Reliable Tyres at a Fair Price</h1> 
+          <div class="services-list">
+              <div>
+                  <i class="fa-solid fa-code"></i>
+                  <h2>Knowledgable Staff </h2>
+                  <p>The staff at our shop has over 18 years of auto experience between them. We are dedicated to finding high-quality replacement tyres for each of our customers.
+                  </p>
+                  <a href="#">Learn more</a>
+                 
+              </div>
+              <div>
+                  <i class="fa-solid fa-crop"></i>
+                  <h2>We Have You Covered </h2>
+                  <p>Whether you're coming in for a quote or tyre replacement, we promise that you will be completely satisfied with your experience
+                  </p>
+                  <a href="#">Learn more</a>
+              </div>              
+          </div>             
+       
+      </div>     
+   </div>   
   </section>
 
-  <!-- About Us Section -->
-  <section id="about" class="about">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>We offer a wide range of tyres suitable for various vehicles. Our tyres are durable, reliable, and affordable.</p>
-    </div>
-  </section>
-
-  <!-- Featured Products Section -->
+   <!-- Featured Products Section -->
   <section id="products" class="featured">
     <div class="container">
       <h2>Featured Products</h2>
       <div class="catalog">
         <div class="product-card">
-          <img src="/images/tyre-a.jpg" alt="Tyre A">
+          <img src="/public/images/3A.png" alt="Tyre A">
           <h3 class="product-name">Tyre A</h3>
           <p>Durable all-terrain tyre.</p>
-          <p><strong>$50</strong></p>
+          <p><strong>$80</strong></p>
           <button onclick="window.location.href='/catalog'">See More</button>
         </div>
         <div class="product-card">
@@ -59,6 +72,32 @@
           <p><strong>$60</strong></p>
           <button onclick="window.location.href='/catalog'">See More</button>
         </div>
+        
+      </div>
+    </div>
+  </section>
+
+   <!-- About Us Section -->
+   <section id="about" class="about">
+    <div class="container">
+      <h2>Who We Are</h2>
+      <p>We know that the auto industry has a reputation of overcharging and up-selling unneeded parts and services. <br><br> Our goal is to build a relationship spanning the life of your car. </p>
+      <div class="row">
+        <div class="about-left">
+          <h1 class="sub-title">Local Experts</h1>
+          <p>
+            The people we surround ourselves with are the most talented, <br><br> dedicated people in the field. Local experts who can give you useful <br><br> advice for the roads you drive.
+          </p>
+
+        </div>
+        <div class="about-right">
+          <h1 class="sub-title">Fast Shipping</h1>
+          <p>
+            We know when you order a part for your car, you need it fast! <br><br>Our tyres are typically on their way within 1-2 business days! Returns are easy, too!<br><br> All packages will come with a return label. Just pay shipping and we'll exchange your part or issue your refund!  
+          </p>
+
+        </div>
+
       </div>
     </div>
   </section>
@@ -68,15 +107,17 @@
     <div class="container">
         <div class="row">
             <div class="contact-left">
-                <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-sharp fa-solid fa-paper-plane"></i>afam262@gmail.com</p>
-                <p><i class="fa-solid fa-square-phone"></i>+1862 596-7814</p>
+                <h1 class="sub-title">Contact Us</h1>
+                <p>2 Okumagba Avnue Warri Delta State, Nigeria.</p>
+                <p><i class="fa-sharp fa-solid fa-paper-plane"></i>chinektyresent@gmail.com</p>
+                <p><i class="fa-solid fa-square-phone"></i>+2348036878762</p>
+                <p><i class="fa-solid fa-square-phone"></i>+2348024649454</p>
                 <div class="social-icons">
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://x.com/AfamAnekeh" target="_blank"><i class="fa-brands fa-twitter-square"></i></a>                        
+                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>                                           
                     <a href="https://www.linkedin.com/in/afam/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </div>
-                <a href="images/Afamefuna Anekeh.pdf" download class="btn btn2">Download Resume</a>
+                <!-- <a href="images/Afamefuna Anekeh.pdf" download class="btn btn2">Download Resume</a> -->
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet" action="https://formspree.io/f/mqaplqwp" method="POST">
