--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #f4f4f4; 
   }
   
   /* Header */
@@ -12,8 +12,10 @@ body {
     color: white;
     padding: 1.5rem 0;
     text-align: center;
+    font-family:'Times New Roman', Times, serif
   }
-  
+
+ 
   nav ul {
     list-style: none;
     padding: 0;
@@ -31,10 +33,87 @@ body {
     text-decoration: none;
     font-size: 1.1rem;
   }
+
+  /*----------services---------------*/
+
+#services{
+  padding: 30px 0;  
+  /* background-color: #ababab;  */
+}
+
+.services-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+
+.services-list div {
+  background: #262626;
+  padding: 40px;
+  font-size: 13px;
+  font-weight: 300;
+  border-radius: 10px;
+  transform: background 0.5s, transform 0.5s;
+}
+
+.services-list div i{
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+.services-list div h2{
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 15px;
+  color: #f4f4f4;
+}
+
+.services-list div a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 12px;
+  margin-top: 20px;
+  display: inline-block;
+}
+
+.services-list p {
+  color: #f4f4f4;
+}
+
+.services-list div:hover{
+  background: #ff004f;
+  background: #ababab;
+  transform: translateY(-10px);
+}
+
+.services-list.sub-title{
+  margin-top: 50px;
+}
+
+.services-left{
+  flex-basis: 35%;
+  margin-top: 30px;
+}
+.services-right{
+  flex-basis: 60%;
+  margin-top: 30px;
+}
+
   
+/* About */
+
+.about-left{
+  flex-basis: 35%;
+}
+.about-right{
+  flex-basis: 60%;
+}
+
+
+
   /* Featured Products Section */
-  .featured {
-    background-color: white;
+  .featured {  
     padding: 4rem 0;
   }
   
@@ -48,6 +127,7 @@ body {
     display: flex;
     gap: 20px;
     justify-content: center;
+    background-image: url("/chinek-app/public/images/Achilles.png");
   }
 
   .product-card:hover {
@@ -139,7 +219,8 @@ form input, form textarea{
   width: 100%;
   border: 0;
   outline: none;
-  background: #262626;
+  /* background: #262626; */
+  background: white;
   padding: 15px;
   margin: 15px;
   color: #fff;
