moving code to heroku

--- a/views/index.html
+++ b/views/index.html
@@ -59,14 +59,35 @@
       <h2>Featured Products</h2>
       <div class="catalog">
         <div class="product-card">
-          <img src="/public/images/3A.png" alt="Tyre A">
+          <img src="/images/Achilles.png" alt="Tyre A">
           <h3 class="product-name">Tyre A</h3>
           <p>Durable all-terrain tyre.</p>
-          <p><strong>$80</strong></p>
+          <p><strong>$50</strong></p>
           <button onclick="window.location.href='/catalog'">See More</button>
         </div>
         <div class="product-card">
-          <img src="/images/tyre-b.jpg" alt="Tyre B">
+          <img src="/images/Dunlop.png" alt="Tyre B">
+          <h3 class="product-name">Tyre B</h3>
+          <p>High performance tyre for sports cars.</p>
+          <p><strong>$60</strong></p>
+          <button onclick="window.location.href='/catalog'">See More</button>
+        </div>
+        <div class="product-card">
+          <img src="/images/Michelin.png" alt="Tyre B">
+          <h3 class="product-name">Tyre B</h3>
+          <p>High performance tyre for sports cars.</p>
+          <p><strong>$60</strong></p>
+          <button onclick="window.location.href='/catalog'">See More</button>
+        </div>
+        <div class="product-card">
+          <img src="/images/Bridgestane.png" alt="Tyre B">
+          <h3 class="product-name">Tyre B</h3>
+          <p>High performance tyre for sports cars.</p>
+          <p><strong>$60</strong></p>
+          <button onclick="window.location.href='/catalog'">See More</button>
+        </div>
+        <div class="product-card">
+          <img src="/images/Boto.png" alt="Tyre B">
           <h3 class="product-name">Tyre B</h3>
           <p>High performance tyre for sports cars.</p>
           <p><strong>$60</strong></p>
