--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5,6 +5,24 @@ body {
     padding: 0;
     background-color: #f4f4f4; 
   }
+/* 
+  html, body {
+    scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
+
+  section {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    scroll-snap-align: start;
+  } */
   
   /* Header */
   header {
@@ -21,7 +39,7 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content: center;   
   }
   
   nav ul li {
@@ -125,9 +143,8 @@ body {
   
   .catalog {
     display: flex;
-    gap: 20px;
-    justify-content: center;
-    background-image: url("/chinek-app/public/images/Achilles.png");
+    gap: 50px;
+    justify-content: center;    
   }
 
   .product-card:hover {
