finished code update

--- a/views/index.html
+++ b/views/index.html
@@ -29,23 +29,11 @@
   <!-- Home Section -->
   <section id="home" class="home">
     <div id="services">
-      <div class="container">
-        <h1 class="sub-title">Our Guarantee is Reliable Tyres at a Fair Price</h1> 
+      <div class="container">        
           <div class="services-list">
               <div>
-                  <i class="fa-solid fa-code"></i>
-                  <h2>Knowledgable Staff </h2>
-                  <p>The staff at our shop has over 18 years of auto experience between them. We are dedicated to finding high-quality replacement tyres for each of our customers.
-                  </p>
-                  <a href="#">Learn more</a>
                  
-              </div>
-              <div>
-                  <i class="fa-solid fa-crop"></i>
-                  <h2>We Have You Covered </h2>
-                  <p>Whether you're coming in for a quote or tyre replacement, we promise that you will be completely satisfied with your experience
-                  </p>
-                  <a href="#">Learn more</a>
+                 
               </div>              
           </div>             
        
@@ -57,64 +45,69 @@
   <section id="products" class="featured">
     <div class="container">
       <h2>Featured Products</h2>
-      <div class="catalog">
-        <div class="product-card">
-          <img src="/images/Achilles.png" alt="Tyre A">
-          <h3 class="product-name">Tyre A</h3>
-          <p>Durable all-terrain tyre.</p>
-          <p><strong>$50</strong></p>
-          <button onclick="window.location.href='/catalog'">See More</button>
+        <div class="scroll-container-wrapper">         
+          <button class="scroll-btn left" id="scroll-left">&#10094;</button>
+
+
+          <div class="catalog scroll-container" id="featured-scroll">
+              <div class="product-card">
+                <img src="/images/Achilles.png" alt="Tyre A">          
+              </div>
+              <div class="product-card">
+                <img src="/images/Dunlop.png" alt="Tyre B">          
+              </div>
+              <div class="product-card">
+                <img src="/images/Michelin.png" alt="Tyre B">          
+              </div>
+              <div class="product-card">
+                <img src="/images/Bridgestane.png" alt="Tyre B">          
+              </div>
+              <div class="product-card">
+                <img src="/images/Boto.png" alt="Tyre B">          
+              </div>        
+              <div class="product-card">
+                <img src="/images/3A.png" alt="Tyre B">          
+              </div> 
+
+              <div class="product-card">
+                <img src="/images/Austin.png" alt="Tyre B">          
+              </div> 
+              <div class="product-card">
+                <img src="/images/Double King.png" alt="Tyre B">          
+              </div> 
+              <div class="product-card">
+                <img src="/images/Farroad.png" alt="Tyre B">          
+              </div> 
+              <div class="product-card">
+                <img src="/images/Maxxis.png" alt="Tyre B">          
+              </div> 
+              <div class="product-card">
+                <img src="/images/Hi Fly.png" alt="Tyre B">          
+              </div> 
+          </div>
+          <button class="scroll-btn right" id="scroll-right">&#10095;</button>
         </div>
-        <div class="product-card">
-          <img src="/images/Dunlop.png" alt="Tyre B">
-          <h3 class="product-name">Tyre B</h3>
-          <p>High performance tyre for sports cars.</p>
-          <p><strong>$60</strong></p>
-          <button onclick="window.location.href='/catalog'">See More</button>
-        </div>
-        <div class="product-card">
-          <img src="/images/Michelin.png" alt="Tyre B">
-          <h3 class="product-name">Tyre B</h3>
-          <p>High performance tyre for sports cars.</p>
-          <p><strong>$60</strong></p>
-          <button onclick="window.location.href='/catalog'">See More</button>
-        </div>
-        <div class="product-card">
-          <img src="/images/Bridgestane.png" alt="Tyre B">
-          <h3 class="product-name">Tyre B</h3>
-          <p>High performance tyre for sports cars.</p>
-          <p><strong>$60</strong></p>
-          <button onclick="window.location.href='/catalog'">See More</button>
-        </div>
-        <div class="product-card">
-          <img src="/images/Boto.png" alt="Tyre B">
-          <h3 class="product-name">Tyre B</h3>
-          <p>High performance tyre for sports cars.</p>
-          <p><strong>$60</strong></p>
-          <button onclick="window.location.href='/catalog'">See More</button>
-        </div>
-        
-      </div>
     </div>
   </section>
 
    <!-- About Us Section -->
    <section id="about" class="about">
-    <div class="container">
-      <h2>Who We Are</h2>
-      <p>We know that the auto industry has a reputation of overcharging and up-selling unneeded parts and services. <br><br> Our goal is to build a relationship spanning the life of your car. </p>
-      <div class="row">
+    <div class="container">      
+      <div class="row-change">
+        <div>
+          <h2>Who We Are</h2>
+          <p>We know that the auto industry has a reputation of overcharging <br><br> and up-selling unneeded parts and services. <br><br> Our goal is to build a relationship spanning the life of your car. </p>
+        </div>
         <div class="about-left">
-          <h1 class="sub-title">Local Experts</h1>
+          <h2 class="sub-title">Local Experts</h2>
           <p>
-            The people we surround ourselves with are the most talented, <br><br> dedicated people in the field. Local experts who can give you useful <br><br> advice for the roads you drive.
+            The people we surround ourselves with are the most talented, <br><br> dedicated people in the field. Local experts who can give you <br><br> useful advice for the roads you drive.
           </p>
-
         </div>
         <div class="about-right">
-          <h1 class="sub-title">Fast Shipping</h1>
+          <h2 class="sub-title">Fast Shipping</h2>
           <p>
-            We know when you order a part for your car, you need it fast! <br><br>Our tyres are typically on their way within 1-2 business days! Returns are easy, too!<br><br> All packages will come with a return label. Just pay shipping and we'll exchange your part or issue your refund!  
+            We know when you order a part for your car, you need it fast! <br><br>Our tyres are typically on their way within 1-2 business days! <br><br> Returns are easy, too!<br><br> All packages will come with a return label. Just pay shipping and <br><br> we'll exchange your part or issue your refund!  
           </p>
 
         </div>
@@ -125,20 +118,20 @@
 
 <!--------contact---------->
   <section id="contact">
-    <div class="container">
+    <div class="container">      
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Us</h1>
-                <p>2 Okumagba Avnue Warri Delta State, Nigeria.</p>
+                <p>@ 2 Okumagba Avnue Warri Delta State, Nigeria.</p>
                 <p><i class="fa-sharp fa-solid fa-paper-plane"></i>chinektyresent@gmail.com</p>
                 <p><i class="fa-solid fa-square-phone"></i>+2348036878762</p>
                 <p><i class="fa-solid fa-square-phone"></i>+2348024649454</p>
                 <div class="social-icons">
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>                                           
-                    <a href="https://www.linkedin.com/in/afam/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>                                           
+                    <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </div>
-                <!-- <a href="images/Afamefuna Anekeh.pdf" download class="btn btn2">Download Resume</a> -->
+                
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet" action="https://formspree.io/f/mqaplqwp" method="POST">
@@ -159,6 +152,6 @@
     </div>
   </footer>
 
-  <script src="/js/app.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
