--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,22 +8,33 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;  
+  background-color: #f4f4f4;   
 }
 
 header {
   background-color: #333;
   color: white;
   padding: 1.5rem 0;
-  text-align: center;
+  text-align: center;  
 }
 
 header h1 {
   font-size: 2.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;  
+}
+
+header .container {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 1rem 0;
+  z-index: 999;
 }
 
 /* Navigation Styles */
+
 nav ul {
   list-style-type: none;
   padding: 0;
@@ -49,7 +60,8 @@ nav ul li a:hover {
 /* Home Section */
 .home {
   background-color: white;  
-  padding: 4rem 0;
+  /* padding: 4rem 0; */
+  padding-top: 100px;
   text-align: center;
 }
 
@@ -71,21 +83,18 @@ nav ul li a:hover {
 }
 
 .about p {
-  font-size: 1.2rem;
+  font-size: 1.2rem;  
   color: #555;
+  font-family:'Times New Roman', Times, serif
 }
 
-/* Featured Products Section */
-.featured {
-  background-color: white;  
-  padding: 4rem 0;
+.row-change{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
 }
 
-.featured h2 {
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 2rem;
-}
 
 /* Section Styling */
 section {
@@ -126,8 +135,8 @@ footer p {
   }  
 }
 
-@media (max-width: 480px) {
+/* @media (max-width: 480px) {
   .catalog {
     grid-template-columns: 1fr;
   }  
-}
+} */
