--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tyre Shop</title>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Play" />
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="/css/index.css">
   <script src="https://kit.fontawesome.com/2b9d44342e.js" crossorigin="anonymous"></script>
