--- a/views/index.html
+++ b/views/index.html
@@ -130,7 +130,7 @@
                 <div class="social-icons">
                     <a href="#" target="_blank"><i class="fa-brands fa-facebook"></i></a>                                           
                     <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
+                    <a href="https://api.whatsapp.com/send/?phone=2348036878762" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></a>
                 </div>
                 
             </div>
