added pictures to the product card

--- a/views/index.html
+++ b/views/index.html
@@ -51,38 +51,38 @@
 
 
           <div class="catalog scroll-container" id="featured-scroll">
-              <div class="product-card">
+              <div class="product-card Achilles">
                 <img src="/images/Achilles.png" alt="Tyre A">          
               </div>
-              <div class="product-card">
+              <div class="product-card Dunlop">
                 <img src="/images/Dunlop.png" alt="Tyre B">          
               </div>
-              <div class="product-card">
+              <div class="product-card Michelin">
                 <img src="/images/Michelin.png" alt="Tyre B">          
               </div>
-              <div class="product-card">
-                <img src="/images/Bridgestane.png" alt="Tyre B">          
+              <div class="product-card Bridgestone">
+                <img src="/images/Bridgestone.png" alt="Tyre B">          
               </div>
-              <div class="product-card">
+              <div class="product-card Boto">
                 <img src="/images/Boto.png" alt="Tyre B">          
               </div>        
-              <div class="product-card">
-                <img src="/images/3A.png" alt="Tyre B">          
+              <div class="product-card A">
+                <img src="/images/3A.jpeg" alt="Tyre B">          
               </div> 
 
-              <div class="product-card">
+              <div class="product-card Austone">
                 <img src="/images/Austin.png" alt="Tyre B">          
               </div> 
-              <div class="product-card">
+              <div class="product-card Double">
                 <img src="/images/Double King.png" alt="Tyre B">          
               </div> 
-              <div class="product-card">
+              <div class="product-card Farroad">
                 <img src="/images/Farroad.png" alt="Tyre B">          
               </div> 
-              <div class="product-card">
+              <div class="product-card Maxxis">
                 <img src="/images/Maxxis.png" alt="Tyre B">          
               </div> 
-              <div class="product-card">
+              <div class="product-card Fly">
                 <img src="/images/Hi Fly.png" alt="Tyre B">          
               </div> 
           </div>
