--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,10 +47,55 @@
     text-align: center;
     max-width: 250px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    background-image: url("/images/shop2.png");
+    /* background-image: url("/images/shop2.png"); */
     height: 30vh;
     flex-shrink: 0;
   }
+
+  .Boto {
+    background-image: url("/images/Boto1.jpeg");
+  }
+  .Michelin {
+    background-image: url("/images/Michelin.jpeg");
+    background-size: cover; 
+  }
+  .Austone {
+    background-image: url("/images/Austone1.jpeg");
+    background-size: cover; 
+  }
+.Maxxis {
+  background-image: url("/images/Maxxis1.jpeg");
+  background-size: cover; 
+}
+.Farroad {
+  background-image: url("/images/Maxxis2.jpeg");
+  background-size: cover; 
+}
+.A {
+  background-image: url("/images/3A1.jpeg"); 
+  background-size: cover; 
+}
+.Bridgestone {
+  background-image: url("/images/Bridgestone.jpeg");
+  background-size: cover; 
+}
+.Double {
+  background-image: url("/images/Double.jpeg");
+  background-size: cover; 
+}
+.Fly {
+  background-image: url("/images/Fly.jpeg");
+  background-size: cover; 
+}
+.Dunlop {
+  background-image: url("/images/Dunlop2.jpeg");
+  background-size: cover; 
+}
+.Achilles {
+  background-image: url("/images/Achilles.jpeg");
+  background-size: cover; 
+}
+
   
   .featured .product-card img {
     width: 100%;
@@ -184,7 +229,7 @@ form input, form textarea{
   background: white;
   padding: 15px;
   margin: 15px;
-  color: #fff;
+  /* color: #fff; */
   font-size: 18px;
   border-radius: 6px;
 }
